app/components/condition-editor/index.css
.ConditionEditor {
    display: flex;
    width: 75vw;
    margin: auto;
}

.ConditionEditor > * {
    flex-basis: 0;
    flex-grow: 1;
    margin: 0 1em;
}

@media(max-width: 768px) {
    .ConditionEditor {
        width: 95vw;
    }

    .ConditionEditor > * {
        margin: 0 0.1em;
    }

    .ConditionEditor > *:first-child {
        margin-left: 0;
    }

    .ConditionEditor > *:last-child {
        margin-right: 0;
    }
}

.ConditionEditor :global(.ember-power-select-multiple-option) {
    background-color: #f0f6ff;
}

:global(.ember-power-select-option[aria-selected="true"]) {
    color: #777;
    background-color: #f0f6ff;
}

.ConditionEditor button {
    border-radius: 4px;
}

.TextInput {
    font-size: 90%;
    line-height: 1.8;
    width: 95%;
    border: 1px solid #aaa;
    border-radius: 4px;
    padding-left: 8px;
}

.ValidationMessages {
    color: #a00;
    margin: 0.25em;
    font-size: 75%;
}

.ClearButton {
    flex-grow: 0;
    margin-left: 0.6em;
}

.ClearButton > button {
    font-size: 90%;
    line-height: 1.75;
    background: none;
}

